Récupération user data + connexion token
Mise en place de la récupération des donnée utilisateur (on pourra les utiliser) + le token est sauvegardé et la connexion aussi lorsqu'on actualise

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "swagger-ui-express": "^4.1.4",
+    "util": "^0.12.5",
     "yamljs": "^0.3.0"
   },
   "scripts": {
